--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,10 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <a href="./1-timer.html">
+      <button></button>
+    </a>
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
-    
+    <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
