--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <a href="./1-timer.html">
-      <button></button>
+      timer
     </a>
-
+    <br>
+    <a href="./2-snackbar.html">
+      snackbar
+    </a>
     <script type="module" src="./js/1-timer.js"></script>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
